# nsu-oop-labs

./: CMakeLists.txt
bigint/: bigint.cpp  bigint.hpp
lab0/: test.cpp
lab1/: App.cpp  App.hpp  CMakeLists.txt  Life.cpp  Life.hpp  LifeConfig.cpp  LifeConfig.hpp  LifeConstants.hpp  LifeFileParser.cpp  LifeFileParser.hpp  LifePresenter.cpp  LifePresenter.hpp  LifeQtGUI.cpp  LifeQtGUI.hpp  LifeView.hpp  Presenter.cpp  Presenter.hpp  Qt5GUI.cpp  Qt5GUI.hpp  default.life  main.cpp  utils.cpp  utils.hpp
lab1/examples/: _Beacon.life  _BeeHive.life  _Blinker.life  _Block.life  _Boat.life  _Default.life  _Glider.life  _GosperGliderGun.life  _LightSpaceship.life  _MiddleSpaceship.life  _PentaDecathlon.life  _Pulsar.life  _Toad.life
lab2/: fmt.cpp  fmt.hpp  main.cpp  sp.hpp
lab3/: CMakeLists.txt  addresses.csv  biostats.csv  cities.csv  csv.cpp  csv.hpp  csv_impl.hpp  main.cpp  test.cpp  test1.csv  test2.csv  tuple.hpp  utils.cpp  utils.hpp
lab4/: CMakeLists.txt  csv.cpp  csv.hpp  csv_impl.hpp  csv_parser.hpp  main.cpp  subtask_1.hpp  subtask_2.hpp  tuple.hpp  tuple_printer.hpp
